MTA & Security added

--- a/app/launchpage.html
+++ b/app/launchpage.html
@@ -15,7 +15,7 @@
             description: "Risks",
             additionalInformation: "SAPUI5.Component=ns.risks",
             applicationType: "URL",
-            url: "./",
+            url: "./risks/webapp",
             navigationMode: "embedded",
           },
           "mitigations-app": {
